tdf#95677 Force sign to exponent for Excel export

Change-Id: I7896d1d064cd92fd45a6b32ac64f534f68213169
Reviewed-on: https://gerrit.libreoffice.org/20064
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Eike Rathke <erack@redhat.com>